--- a/_css/styles.css
+++ b/_css/styles.css
@@ -90,7 +90,7 @@ i {
   margin-left:1.8em;
   opacity: 1;
   transition: opacity 3s;
-  /*background-color: rgba(0, 0, 0,.35);*/
+  background-color: rgba(0, 0, 0,.35);
   /*padding-left: 1em;
   margin-bottom: 1em;*/
   /*border:1px solid white;*/
