--- a/_css/styles.css
+++ b/_css/styles.css
@@ -77,7 +77,7 @@ p {
   }
 p:first-child {
   margin-top: 0;
-}
+  }
 i {
   display: inline-block;
   font-size: .75em;
@@ -95,6 +95,15 @@ i {
   margin-bottom: 1em;*/
   /*border:1px solid white;*/
   /*overflow: hidden;*/
+  }
+/*.photographer-frame {
+  display: flex;
+  justify-content: flex-start;
+  }*/
+  .photographer-frame span{
+  color: #fff;
+  display:inline-block;
+  padding-left: .25em;
   }
 .hidden {
   opacity:0;
