--- a/_css/styles.css
+++ b/_css/styles.css
@@ -128,8 +128,14 @@ table {
 }
 
 /* app styles */
-.cb-slideshow,
-.cb-slideshow:after {
+body {
+  background-color: #f1f1f1;
+  font-family: 'Great Vibes', cursive;
+  width: 100vh;
+  height: 100vh;
+}
+.slideshow,
+.slideshow:after {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -137,11 +143,11 @@ table {
   left: 0px;
   z-index: 0;
 }
-.cb-slideshow:after {
+.slideshow:after {
   content: '';
   background: transparent url(../_img/pattern.png) repeat top left;
 }
-.cb-slideshow li span {
+.slideshow li span {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -151,178 +157,124 @@ table {
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: none;
-  opacity: 0;
+  opacity: 1;
   z-index: 0;
-  /*animation: imageAnimation 180s linear infinite 0s;*/
 }
-.cb-slideshow li div {
-  z-index: 10;
+.slideshow li div {
+  z-index: 2;
   position: absolute;
-  bottom: 30px;
-  left: 0px;
+  top: 30px;
+  left: 20px;
   width: 100%;
+  text-align: left;
+  color: rgba(241, 241, 241, .5);
+  font-size: 1.2em;
+}
+.slideshow li a {
+  color: rgba(241, 241, 241, .5);
+  text-decoration: none;
+}
+.slideshow li a:hover {
+  color: rgba(241, 241, 241, .8);
+}
+.slideshow li div p i {
+  /*font-size: 1em;*/
+  color: rgba(241, 241, 241, .6);
+  padding-right: 5px;
+  display: inline-block;
+  z-index: 2;
+}
+/*_______________________preloader_______________________*/
+.spinner {
+  position: absolute;
+  top: 38%;
+  left: 48%;
+  width: 40px;
+  height: 40px;
+  position: relative;
   text-align: center;
-  opacity: 0;
-  color: #fff;
-  /*animation: titleAnimation 180s linear infinite 0s;*/
-}
-.cb-slideshow li div h3 {
-  font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
-  font-size: 2em;
-  padding: 0;
-  line-height: 1.5;
-}
-/*.cb-slideshow li:nth-child(1) span {
-  animation-delay: 0s;
-}
-.cb-slideshow li:nth-child(2) span {
-  animation-delay: 150s;
-}
-.cb-slideshow li:nth-child(3) span {
-  animation-delay: 330s;
-}
-.cb-slideshow li:nth-child(4) span {
-  animation-delay: 510s;
-}
-.cb-slideshow li:nth-child(5) span {
-  animation-delay: 690s;
-}
-.cb-slideshow li:nth-child(6) span {
-  animation-delay: 870s;
-}
-.cb-slideshow li:nth-child(7) span {
-  animation-delay: 1050s;
-}
-.cb-slideshow li:nth-child(8) span {
-  animation-delay: 1230s;
-}
-.cb-slideshow li:nth-child(9) span {
-  animation-delay: 1410s;
-}
-.cb-slideshow li:nth-child(10) span {
-  animation-delay: 1590s;
-}
-.cb-slideshow li:nth-child(11) span {
-  animation-delay: 1770s;
-}
-.cb-slideshow li:nth-child(12) span {
-  animation-delay: 1950s;
-}
-.cb-slideshow li:nth-child(13) span {
-  animation-delay: 2130s;
-}
-.cb-slideshow li:nth-child(14) span {
-  animation-delay: 2310s;
-}
-.cb-slideshow li:nth-child(15) span {
-  animation-delay: 2490s;
-}
-.cb-slideshow li:nth-child(16) span {
-  animation-delay: 2670s;
-}
-.cb-slideshow li:nth-child(17) span {
-  animation-delay: 2850s;
-}
-.cb-slideshow li:nth-child(18) span {
-  animation-delay: 3030s;
-}
-.cb-slideshow li:nth-child(19) span {
-  animation-delay: 3210s;
-}
-.cb-slideshow li:nth-child(20) span {
-  animation-delay: 3390s;
+
+  -webkit-animation: sk-rotate 2.0s infinite linear;
+  animation: sk-rotate 2.0s infinite linear;
 }
 
-.cb-slideshow li:nth-child(2) div {
-  animation-delay: 180s;
+.dot1,
+.dot2 {
+  width: 60%;
+  height: 60%;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  background-color: #333;
+  border-radius: 100%;
+
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
 }
-.cb-slideshow li:nth-child(3) div {
-  animation-delay: 360s;
+
+.dot2 {
+  top: auto;
+  bottom: 0;
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
 }
-.cb-slideshow li:nth-child(4) div {
-  animation-delay: 540s;
-}
-.cb-slideshow li:nth-child(5) div {
-  animation-delay: 720s;
-}
-.cb-slideshow li:nth-child(6) div {
-  animation-delay: 900s;
-}
-.cb-slideshow li:nth-child(7) div {
-  animation-delay: 1080s;
-}
-.cb-slideshow li:nth-child(8) div {
-  animation-delay: 1260s;
-}
-.cb-slideshow li:nth-child(9) div {
-  animation-delay: 1440s;
-}
-.cb-slideshow li:nth-child(10) div {
-  animation-delay: 1620s;
-}
-.cb-slideshow li:nth-child(11) div {
-  animation-delay: 1800s;
-}
-.cb-slideshow li:nth-child(12) div {
-  animation-delay: 1980s;
-}
-.cb-slideshow li:nth-child(13) div {
-  animation-delay: 2160s;
-}
-.cb-slideshow li:nth-child(14) div {
-  animation-delay: 2340s;
-}
-.cb-slideshow li:nth-child(15) div {
-  animation-delay: 2520s;
-}
-.cb-slideshow li:nth-child(16) div {
-  animation-delay: 2700s;
-}
-.cb-slideshow li:nth-child(17) div {
-  animation-delay: 2880s;
-}
-.cb-slideshow li:nth-child(18) div {
-  animation-delay: 3060s;
-}
-.cb-slideshow li:nth-child(19) div {
-  animation-delay: 3240s;
-}
-.cb-slideshow li:nth-child(20) div {
-  animation-delay: 3420s;
-}
-@keyframes imageAnimation {
-  0% {
-    opacity: 0;
-    animation-timing-function: ease-in;
-  }
-  10% {
-    opacity: 1;
-    animation-timing-function: ease-out;
-  }
-  /*17% {
-    opacity: 1;
-  }*/
-  90% {
-    opacity: 1;
-  }
+
+@-webkit-keyframes sk-rotate {
   100% {
-    opacity: 0;
+    -webkit-transform: rotate(360deg);
   }
 }
-@keyframes titleAnimation {
-  0% {
-    opacity: 0;
-  }
-  8% {
-    opacity: 1;
-  }
-  17% {
-    opacity: 1;
-  }
-  19% {
-    opacity: 0;
-  }
+@keyframes sk-rotate {
   100% {
-    opacity: 0;
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
   }
-}*/
+}
+
+@-webkit-keyframes sk-bounce {
+  0%,
+  100% {
+    -webkit-transform: scale(0.0);
+  }
+  50% {
+    -webkit-transform: scale(1.0);
+  }
+}
+
+@keyframes sk-bounce {
+  0%,
+  100% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  }
+  50% {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
+.spinner-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #f1f1f1;
+  background-image: radial-gradient(
+    circle farthest-corner at 50% 50%,
+    #f1f1f1 0%,
+    #f1f1f1 50%,
+    #919191 100%
+  );
+  z-index: 100;
+}
+.spinner-wrapper h1 {
+  position: relative;
+  top: 38%;
+  text-align: center;
+  font-size: 5.5em;
+}
+@media screen and (min-width: 768px) {
+  .spinner-wrapper h1 {
+    font-size: 8.4em;
+  }
+}
