--- a/_css/styles.css
+++ b/_css/styles.css
@@ -167,21 +167,18 @@ body {
   left: 20px;
   width: 100%;
   text-align: left;
-  color: rgba(241, 241, 241, .5);
-  font-size: 1.2em;
 }
 .slideshow li a {
-  color: rgba(241, 241, 241, .5);
+  color: rgba(241, 241, 241, .9);
   text-decoration: none;
 }
-.slideshow li a:hover {
-  color: rgba(241, 241, 241, .8);
+.slideshow .photographer-info a:hover {
+  color: rgba(241, 241, 241, .4) !important;
 }
-.slideshow li div p i {
-  /*font-size: 1em;*/
-  color: rgba(241, 241, 241, .6);
+#camera-icon {
+  font-size: .75em;
+  text-align: center;
   padding-right: 5px;
-  display: inline-block;
   z-index: 2;
 }
 /*_______________________preloader_______________________*/
@@ -268,7 +265,8 @@ body {
   z-index: 100;
   opacity: 1;
   /*display: block;*/
-  transition: all 8s;
+  transition: opacity 8s;
+  transition: display 8s 4s;
 }
 .spinner-wrapper h1 {
   position: relative;
@@ -284,5 +282,42 @@ body {
 .hide-preloader {
   position: absolute;
   opacity: 0;
-  /*display: none;*/
+  display: none;
+}
+.slideshow-image--hide {
+  opacity: 0;
+  transition: all 8s;
+  /*   display: none; */
+}
+.slideshow-image--reveal {
+  opacity: 1;
+  /* display: block; */
+  transition: all 8s;
+}
+.photographer-info {
+  z-index: 10;
+  font-size: 1.75em;
+  letter-spacing: .06em;
+  /* text-align: center; */
+}
+@media screen and (min-width: 768px) {
+  .photographer-info {
+    text-align: left;
+    margin-top: .75em;
+    margin-left: .25em;
+  }
+}
+.disclaimer {
+  margin-top: .09em;
+  padding-top: 0;
+  text-align: center;
+  font-family: arial;
+  font-size: 1em;
+  color: rgba(241, 241, 241, .7);
+}
+@media screen and (min-width: 768px) {
+  .disclaimer {
+    text-align: left;
+    margin-left: 4.5em;
+  }
 }
